# diagon

./: README.md  pyproject.toml
diagon/: __init__.py  file_gate.py  stopgate.py
